Make drop down fixed, so it can be inside divs with overflow-y

--- a/ember-widgets.css
+++ b/ember-widgets.css
@@ -279,6 +279,7 @@
   box-sizing: border-box;
 }
 .ember-select .dropdown-menu {
+  position: fixed;
   min-width: 200px;
   max-width: 600px;
   padding: 0;
